@@ -7,14 +7,7 @@
 export DH_OPTIONS
 
 DEB_HOST_MULTIARCH	:= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-DEB_HOST_ARCH		:= $(shell dpkg-architecture -qDEB_HOST_ARCH)
-COMMON_OPTIONS := -DENABLE_TESTS=1 -DUSE_GN=1 -DBOOTSTRAP_GN=1
-
-ifeq (arm64,$(DEB_HOST_ARCH))
-COMMON_OPTIONS += -DENABLE_HYBRIS=0
-else
-COMMON_OPTIONS += -DENABLE_HYBRIS_CAMERA=1
-endif
+COMMON_OPTIONS := -DENABLE_TESTS=1 -DENABLE_HYBRIS_CAMERA=1 -DUSE_GN=1 -DBOOTSTRAP_GN=1
 
 %:
 	dh $@ --parallel
